--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -35,5 +35,5 @@ jobs:
           -H "Accept: application/vnd.github+json" \
           -H "Authorization: Bearer ${{ secrets.ACCESS_TOKEN }}" \
           -H "X-GitHub-Api-Version: 2022-11-28" \
-          https://api.github.com/repos/umu-art/g-core \
-          -d '{"event_type":"Deploy"}'
+          https://api.github.com/repos/umu-art/g-core/actions/workflows/Deploy/dispatches \
+          -d '{"ref":"master"}'
