--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -24,6 +24,7 @@ jobs:
     - name: Redocly lint
       run: redocly lint ./*.yaml --config ./configs/lint.yaml
 
+
   trigger-g-core:
     needs: lint
     runs-on: ubuntu-latest
@@ -37,3 +38,19 @@ jobs:
           -H "X-GitHub-Api-Version: 2022-11-28" \
           https://api.github.com/repos/umu-art/g-core/actions/workflows/deploy.yml/dispatches \
           -d '{"ref":"master", "inputs":{}}'
+
+
+  trigger-g-ui:
+    needs: lint
+    runs-on: ubuntu-latest
+    steps:
+    - name: Fire event
+      run: |
+        curl -L \
+          -X POST \
+          -H "Accept: application/vnd.github+json" \
+          -H "Authorization: Bearer ${{ secrets.ACCESS_TOKEN }}" \
+          -H "X-GitHub-Api-Version: 2022-11-28" \
+          https://api.github.com/repos/umu-art/g-ui/actions/workflows/deploy.yml/dispatches \
+          -d '{"ref":"master", "inputs":{}}'
+
